trunk/Archive2/13/4eb5b2ef247b3f/output
main.cpp:11:12: error: template argument 3 is invalid
     : std::true_type {};
            ^
